crates/uitest/fixtures/ty_check/inherent_const_generic_args.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/inherent_const_generic_args.fe
---
error[2-0011]: incorrect number of generic arguments for `SIZE`; expected 0, given 1
   ┌─ inherent_const_generic_args.fe:22:8
   │
22 │     S::SIZE<1>
   │        ^^^^ expected 0 arguments, but 1 were given

error[2-0011]: incorrect number of generic arguments for `SIZE`; expected 0, given 1
   ┌─ inherent_const_generic_args.fe:27:8
   │
27 │     S::SIZE<u256>
   │        ^^^^ expected 0 arguments, but 1 were given

error[2-0011]: incorrect number of generic arguments for `TSIZE`; expected 0, given 1
   ┌─ inherent_const_generic_args.fe:32:8
   │
32 │     S::TSIZE<1>
   │        ^^^^^ expected 0 arguments, but 1 were given

error[2-0011]: incorrect number of generic arguments for `TSIZE`; expected 0, given 1
   ┌─ inherent_const_generic_args.fe:37:21
   │
37 │     <S as HasSize>::TSIZE<1>
   │                     ^^^^^ expected 0 arguments, but 1 were given
